--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -1,6 +1,8 @@
 <html>
 <head>
   <!-- Link the style sheet here -->
+  <link rel="stylesheet" href="/static/style.css">
+  <link rel="stylesheet" href="/static/bootstrap.min.css">
 </head>
 <div>
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color:darkturquoise; height: 1in;">
@@ -28,35 +30,38 @@
     <div class="card" style="width: 80%;margin: auto; margin-top:5%;">
       <div class="banner" name="about-header">
       <!-- Insert header information here -->
+      <h1>About Us</h1>
+      <p>Welcome to Best Cars dealership, home to the best cars in North America. We deal in sale of domestic and imported cars at reasonable prices.</p>
+      <p>With over 20 years of experience in the automotive industry, we pride ourselves on providing exceptional customer service and high-quality vehicles. Our team of experts is dedicated to helping you find the perfect car that fits your needs and budget.</p>
       </div>
       <div style="display: flex;flex-direction: row; margin:auto">
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="https://placehold.co/600x400" alt="CEO Image">
         <div class="card-body">
-          <p class="title">Person1</p>
-          <p>Person1 Title</p>
-          <p class="card-text">Some text that explains the person1 in about 2 short sentences</p>
-          <p>person1@example.com</p>
+          <p class="title">John Anderson</p>
+          <p>Chief Executive Officer</p>
+          <p class="card-text">John has been leading our company for over 15 years with a vision for excellence and customer satisfaction. Under his leadership, we've expanded to 25 locations nationwide.</p>
+          <p>john.anderson@bestcars.com</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="https://placehold.co/600x400" alt="Sales Director Image">
         <div class="card-body">
-          <p class="title">Person2</p>
-          <p>Person2 Title</p>
-          <p class="card-text">Some text that explains the person2 in about 2 short sentences</p>
-          <p>person2@example.com</p>
+          <p class="title">Sarah Johnson</p>
+          <p>Sales Director</p>
+          <p class="card-text">Sarah oversees our sales operations and ensures every customer receives personalized attention. She has been with Best Cars for 12 years and holds multiple industry awards.</p>
+          <p>sarah.johnson@bestcars.com</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="https://placehold.co/600x400" alt="Service Manager Image">
         <div class="card-body">
-          <p class="title">Person3</p>
-          <p>Person3 Title</p>
-          <p class="card-text">Some text that explains the person3 in about 2 short sentences</p>
-          <p>person3@example.com</p>
+          <p class="title">Michael Chen</p>
+          <p>Service Manager</p>
+          <p class="card-text">Michael leads our service department with over 20 years of automotive expertise. He ensures all our vehicles meet the highest standards of quality and safety.</p>
+          <p>michael.chen@bestcars.com</p>
         </div>
       </div>
     </div>
